# qps

./: .gitattributes  .qps.cpp.swp  CHANGELOG  CMakeLists.txt  Makefile  Qt6TranslationLoader.cpp.in  README.md  SECURITY.md  command.cpp  command.h  commandmodel.h  config.h  details.cpp  details.h  dialogs.cpp  dialogs.h  fieldsel.cpp  fieldsel.h  global.h  htable.cpp  htable.h  htable2.cpp  htable2.h  infobar.cpp  infobar.h  lookup.cpp  lookup.h  misc.cpp  misc.h  org.lxqt.Qps.appdata.xml  prefs.cpp  prefs.h  proc.h  proc_common.cpp  proc_linux.cpp  proc_mosix.cpp  proc_solaris.cpp  pstable.cpp  pstable.h  pstable2.cpp  (+25 more)
.github/: ISSUE_TEMPLATE.md
.moc/: moc_command.cpp  moc_details.cpp  moc_dialogs.cpp  moc_fieldsel.cpp  moc_htable.cpp  moc_infobar.cpp  moc_lookup.cpp  moc_misc.cpp  moc_prefs.cpp  moc_pstable.cpp  moc_qps.cpp  moc_qttableview.cpp  moc_trayicon.cpp
.ui/: ui_message.h  ui_watchdog.h
cmake/: LXQtTranslateDesktop.cmake  Qt5TranslationLoader.cmake
src/: CMakeLists.txt  checkboxdelegate.cpp  checkboxdelegate.h  command.cpp  command.h  commanddialog.cpp  commanddialog.h  commandmodel.cpp  commandmodel.h  commandutils.cpp  commandutils.h  config.h  details.cpp  details.h  dialogs.cpp  dialogs.h  execwindow.cpp  execwindow.h  fieldsel.cpp  fieldsel.h  global.h  htable.cpp  htable.h  htable2.cpp  htable2.h  infobar.cpp  infobar.h  listmodel.cpp  listmodel.h  lookup.cpp  lookup.h  misc.cpp  misc.h  prefs.cpp  prefs.h  proc.cpp  proc.h  proc_common.cpp  proc_linux.cpp  proc_mosix.cpp  (+33 more)
src/translations/: qps.ts  qps_ar.desktop.yaml  qps_ar.ts  qps_arn.ts  qps_ast.ts  qps_bg.desktop.yaml  qps_bg.ts  qps_ca.desktop.yaml  qps_ca.ts  qps_cs.desktop.yaml  qps_cs.ts  qps_cy.ts  qps_da.desktop.yaml  qps_da.ts  qps_de.desktop.yaml  qps_de.ts  qps_el.desktop.yaml  qps_el.ts  qps_en_GB.desktop.yaml  qps_en_GB.ts  qps_es.desktop.yaml  qps_es.ts  qps_et.desktop.yaml  qps_et.ts  qps_fi.desktop.yaml  qps_fi.ts  qps_fr.desktop.yaml  qps_fr.ts  qps_gl.ts  qps_he.desktop.yaml  qps_he.ts  qps_hi.ts  qps_hr.desktop.yaml  qps_hr.ts  qps_hu.desktop.yaml  qps_hu.ts  qps_id.ts  qps_is.ts  qps_it.desktop.yaml  qps_it.ts  (+44 more)
